tests/baselines/reference/accessorWithMismatchedAccessibilityModifiers.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts(2,9): error TS2379: Getter and setter accessors do not agree in visibility.
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts(5,17): error TS2379: Getter and setter accessors do not agree in visibility.
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts(10,19): error TS2379: Getter and setter accessors do not agree in visibility.
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts(13,17): error TS2379: Getter and setter accessors do not agree in visibility.
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts(18,19): error TS2379: Getter and setter accessors do not agree in visibility.
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts(20,9): error TS2379: Getter and setter accessors do not agree in visibility.
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts(26,26): error TS2379: Getter and setter accessors do not agree in visibility.
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts(28,16): error TS2379: Getter and setter accessors do not agree in visibility.


==== tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithMismatchedAccessibilityModifiers.ts (8 errors) ====
    class C {
        get x() {
            ~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
            return 1;
        }
        private set x(v) {
                    ~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
        }
    }
    
    class D {
        protected get x() {
                      ~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
            return 1;
        }
        private set x(v) {
                    ~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
        }
    }
    
    class E {
        protected set x(v) {
                      ~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
        }
        get x() {
            ~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
            return 1;
        }
    }
    
    class F {
        protected static set x(v) {
                             ~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
        }
        static get x() {
                   ~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
            return 1;
        }
    }